--- a/index.html
+++ b/index.html
@@ -9,25 +9,34 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
-        <ul>
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="" class="nav-link">Portfolio</a></li>
-          <li><a href="" class="nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="navigation">
+          <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+          <ul class="menu">
+            <li><a href="./index.html" class="nav-link">Studio</a></li>
+            <li><a href="" class="nav-link">Portfolio</a></li>
+            <li><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
@@ -37,28 +46,28 @@
       <section class="vision">
         <h2 hidden>Strategy Punctuality Diligence Technologies</h2>
         <ul>
-          <li>
+          <li class="vision-item">
             <h3 class="vision-title">Strategy</h3>
             <p class="vision-text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li>
+          <li class="vision-item">
             <h3 class="vision-title">Punctuality</h3>
             <p class="vision-text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li>
+          <li class="vision-item">
             <h3 class="vision-title">Diligence</h3>
             <p class="vision-text">
               Research and confirm brands with the strongest digital growth opportunities and
               minimize risk.
             </p>
           </li>
-          <li>
+          <li class="vision-item">
             <h3 class="vision-title">Technologies</h3>
             <p class="vision-text">
               Design practice focused on digital experiences. We bring forth a deep passion for
