--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       <section class="vision">
         <h2 hidden>Strategy Punctuality Diligence Technologies</h2>
-        <ul>
+        <ul class="vision-list">
           <li class="vision-item">
             <h3 class="vision-title">Strategy</h3>
             <p class="vision-text">
@@ -78,7 +78,7 @@
       </section>
       <section class="team">
         <h2 class="team-header">Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li class="team-section">
             <img src="./images/4-min.jpg" width="264" height="260" alt="Mark Guerrero" />
             <h3 class="team-title">Mark Guerrero</h3>
