--- a/index.html
+++ b/index.html
@@ -40,134 +40,149 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <section class="vision">
-        <h2 hidden>Strategy Punctuality Diligence Technologies</h2>
-        <ul class="vision-list">
-          <li class="vision-item">
-            <h3 class="vision-title">Strategy</h3>
-            <p class="vision-text">
-              Our goal is to identify the business problem to walk away with the perfect and
-              creative solution.
-            </p>
-          </li>
-          <li class="vision-item">
-            <h3 class="vision-title">Punctuality</h3>
-            <p class="vision-text">
-              Bring the key message to the brand's audience for the best price within the shortest
-              possible time.
-            </p>
-          </li>
-          <li class="vision-item">
-            <h3 class="vision-title">Diligence</h3>
-            <p class="vision-text">
-              Research and confirm brands with the strongest digital growth opportunities and
-              minimize risk.
-            </p>
-          </li>
-          <li class="vision-item">
-            <h3 class="vision-title">Technologies</h3>
-            <p class="vision-text">
-              Design practice focused on digital experiences. We bring forth a deep passion for
-              problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Strategy Punctuality Diligence Technologies</h2>
+          <ul class="vision-list">
+            <li class="vision-item">
+              <h3 class="vision-title">Strategy</h3>
+              <p class="vision-text">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li class="vision-item">
+              <h3 class="vision-title">Punctuality</h3>
+              <p class="vision-text">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li class="vision-item">
+              <h3 class="vision-title">Diligence</h3>
+              <p class="vision-text">
+                Research and confirm brands with the strongest digital growth opportunities and
+                minimize risk.
+              </p>
+            </li>
+            <li class="vision-item">
+              <h3 class="vision-title">Technologies</h3>
+              <p class="vision-text">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-header">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-section">
-            <img src="./images/4-min.jpg" width="264" height="260" alt="Mark Guerrero" />
-            <div class="container">
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-section">
-            <img src="./images/1-min.jpg" width="264" height="260" alt="Tom Ford" />
-            <div class="container">
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="team-section">
-            <img src="./images/2-min.jpg" width="264" height="260" alt="Camila Garcia" />
-            <div class="container">
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
-            </div>
-          </li>
-          <li class="team-section">
-            <img src="./images/3-min.jpg" width="264" height="260" alt="Daniel Wilson" />
-            <div class="container">
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-header">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-section">
+              <img src="./images/4-min.jpg" width="264" height="260" alt="Mark Guerrero" />
+              <div class="container">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-section">
+              <img src="./images/1-min.jpg" width="264" height="260" alt="Tom Ford" />
+              <div class="container">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-section">
+              <img src="./images/2-min.jpg" width="264" height="260" alt="Camila Garcia" />
+              <div class="container">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-section">
+              <img src="./images/3-min.jpg" width="264" height="260" alt="Daniel Wilson" />
+              <div class="container">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-header">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-section">
-            <img src="./images/app-min.jpg" alt="Banking App" width="360" height="300" />
-            <div class="container">
-              <h3 class="portfolio-title">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-section">
-            <img src="./images/payment-min.jpg" alt="Cashless Payment" width="360" height="300" />
-            <div class="container">
-              <h3 class="portfolio-title">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-section">
-            <img src="./images/meditation-min.jpg" alt="Meditation App" width="360" height="300" />
-            <div class="container">
-              <h3 class="portfolio-title">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-section">
-            <img src="./images/taxi-min.jpg" alt="Taxi Service" width="360" height="300" />
-            <div class="container">
-              <h3 class="portfolio-title">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-section">
-            <img
-              src="./images/illustrations-min.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <div class="container">
-              <h3 class="portfolio-title">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </div>
-          </li>
-          <li class="portfolio-section">
-            <img src="./images/courses-min.jpg" alt="Online Courses" width="360" height="300" />
-            <div class="container">
-              <h3 class="portfolio-title">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-header">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-section">
+              <img src="./images/app-min.jpg" alt="Banking App" width="360" height="300" />
+              <div class="container">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-section">
+              <img src="./images/payment-min.jpg" alt="Cashless Payment" width="360" height="300" />
+              <div class="container">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-section">
+              <img
+                src="./images/meditation-min.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="container">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-section">
+              <img src="./images/taxi-min.jpg" alt="Taxi Service" width="360" height="300" />
+              <div class="container">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-section">
+              <img
+                src="./images/illustrations-min.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="container">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-section">
+              <img src="./images/courses-min.jpg" alt="Online Courses" width="360" height="300" />
+              <div class="container">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
