--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
       <section class="vision">
         <div class="container">
-          <h2 hidden>Strategy Punctuality Diligence Technologies</h2>
+          <h2 class="visually-hidden">Strategy Punctuality Diligence Technologies</h2>
           <ul class="vision-list">
             <li class="vision-item">
               <h3 class="vision-title">Strategy</h3>
