--- a/index.html
+++ b/index.html
@@ -86,28 +86,28 @@
           <ul class="team-list">
             <li class="team-section">
               <img src="./images/4-min.jpg" width="264" height="260" alt="Mark Guerrero" />
-              <div class="container">
+              <div class="team-box">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
             </li>
             <li class="team-section">
               <img src="./images/1-min.jpg" width="264" height="260" alt="Tom Ford" />
-              <div class="container">
+              <div class="team-box">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-section">
               <img src="./images/2-min.jpg" width="264" height="260" alt="Camila Garcia" />
-              <div class="container">
+              <div class="team-box">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
             </li>
             <li class="team-section">
               <img src="./images/3-min.jpg" width="264" height="260" alt="Daniel Wilson" />
-              <div class="container">
+              <div class="team-box">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
@@ -121,14 +121,14 @@
           <ul class="portfolio-list">
             <li class="portfolio-section">
               <img src="./images/app-min.jpg" alt="Banking App" width="360" height="300" />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-section">
               <img src="./images/payment-min.jpg" alt="Cashless Payment" width="360" height="300" />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -140,14 +140,14 @@
                 width="360"
                 height="300"
               />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-section">
               <img src="./images/taxi-min.jpg" alt="Taxi Service" width="360" height="300" />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
@@ -159,14 +159,14 @@
                 width="360"
                 height="300"
               />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-section">
               <img src="./images/courses-min.jpg" alt="Online Courses" width="360" height="300" />
-              <div class="container">
+              <div class="portfolio-box">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
