--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navigation">
           <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
           <ul class="menu">
-            <li><a href="./index.html" class="nav-link">Studio</a></li>
+            <li><a href="./index.html" class="nav-link current">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
@@ -50,6 +50,11 @@
           <h2 class="visually-hidden">Strategy Punctuality Diligence Technologies</h2>
           <ul class="vision-list">
             <li class="vision-item">
+              <div class="container">
+                <svg width="64" heigth="64">
+                  <use href="./images/symbol-defs.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="vision-title">Strategy</h3>
               <p class="vision-text">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -57,6 +62,11 @@
               </p>
             </li>
             <li class="vision-item">
+              <div class="container">
+                <svg width="64" heigth="64">
+                  <use href="./images/symbol-defs.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="vision-title">Punctuality</h3>
               <p class="vision-text">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -64,6 +74,11 @@
               </p>
             </li>
             <li class="vision-item">
+              <div class="container">
+                <svg width="64" heigth="64">
+                  <use href="./images/symbol-defs.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="vision-title">Diligence</h3>
               <p class="vision-text">
                 Research and confirm brands with the strongest digital growth opportunities and
@@ -71,6 +86,11 @@
               </p>
             </li>
             <li class="vision-item">
+              <div class="container">
+                <svg width="64" heigth="64">
+                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="vision-title">Technologies</h3>
               <p class="vision-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -89,6 +109,28 @@
               <div class="team-box">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <div class="container">
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section">
@@ -96,6 +138,28 @@
               <div class="team-box">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <div class="container">
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section">
@@ -103,6 +167,28 @@
               <div class="team-box">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <div class="container">
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-section">
@@ -110,6 +196,28 @@
               <div class="team-box">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <div class="container">
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="./" class="team-link">
+                    <svg width="16" height="16">
+                      <use href="./images/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -120,52 +228,105 @@
           <h2 class="portfolio-header">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-section">
-              <img src="./images/app-min.jpg" alt="Banking App" width="360" height="300" />
+              <div class="portfolio-pic">
+                <img src="./images/app-min.jpg" alt="Banking App" width="360" height="300" />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-section">
-              <img src="./images/payment-min.jpg" alt="Cashless Payment" width="360" height="300" />
+              <div class="portfolio-pic">
+                <img
+                  src="./images/payment-min.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-section">
-              <img
-                src="./images/meditation-min.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic">
+                <img
+                  src="./images/meditation-min.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-section">
-              <img src="./images/taxi-min.jpg" alt="Taxi Service" width="360" height="300" />
+              <div class="portfolio-pic">
+                <img src="./images/taxi-min.jpg" alt="Taxi Service" width="360" height="300" />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-section">
-              <img
-                src="./images/illustrations-min.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic">
+                <img
+                  src="./images/illustrations-min.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-section">
-              <img src="./images/courses-min.jpg" alt="Online Courses" width="360" height="300" />
+              <div class="portfolio-pic">
+                <img src="./images/courses-min.jpg" alt="Online Courses" width="360" height="300" />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-box">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -177,11 +338,38 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+        <div class="footer-start">
+          <a href="./index.html" class="footer-logo">Web<span class="accent">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-sm">
+          <p class="sm-text">Social media</p>
+          <div class="footer-links">
+            <a href="./" class="footer-link">
+              <svg width="24" height="24">
+                <use href="./images/symbol-defs.svg#instagram"></use>
+              </svg>
+            </a>
+            <a href="./" class="footer-link">
+              <svg width="24" height="24">
+                <use href="./images/symbol-defs.svg#twitter"></use>
+              </svg>
+            </a>
+            <a href="./" class="footer-link">
+              <svg width="24" height="24">
+                <use href="./images/symbol-defs.svg#facebook"></use>
+              </svg>
+            </a>
+            <a href="./" class="footer-link">
+              <svg width="24" height="24">
+                <use href="./images/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
